tests/test109.rael.exp
rael
Error [6:5]: ';' has to be inside a loop
|     ;
|     ^
